syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Common.proto";

message UserHomeRequest {
  CommonRequest head = 1;
  bool sendHeart = 2;
}

message UserHomeResponse {
  CommonResponse head = 1;
  int32 loginbonusNum = 2;
  int32 presentboxNum = 3;
  repeated PresentData loginbonusList = 4;
  repeated string friendWordList = 5;
  optional google.protobuf.Timestamp heartSendTime = 6;
  optional google.protobuf.Timestamp friendRecvRequestTime = 7;
  optional google.protobuf.Timestamp friendAddTime = 8;
  repeated Offer offerList = 9;
  optional google.protobuf.Timestamp latestNewsTime = 10;
}

message Offer {
  string id = 1;
  string purchaseId = 2;
  string title = 3;
  google.protobuf.Timestamp startTime = 4;
  google.protobuf.Timestamp endTime = 5;
  string button = 6;
  string image = 7;
  string ornaments = 8;
}

